--- a/mpit/appsettings.json
+++ b/mpit/appsettings.json
@@ -8,5 +8,23 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContext": "Server=db;Port=5432;Database=mpit;Username=mpit;Password=mpit;"
-  }     
+  },
+  "JwtOptions": {
+    "SecretKey": "c6655065-4095-48df-85a1-227b4277c606-plus-hopes-and-dreams-c6655065-4095-48df-85a1-227b4277c606",
+    "Issuer": "https://ites.fun",
+    "Audience": "https://ites.vercel.app",
+    "ExpiresDays": "14"
+  },
+  "AuthorizationOptions": {
+    "RolePermissions": [
+      {
+        "Role": "User",
+        "Permissions": [  ]
+      },
+      {
+        "Role": "Admin",
+        "Permissions": [ "Moderate" ]
+      }
+    ]
+  }
 }
