--- a/mpit/appsettings.json
+++ b/mpit/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContext": "Server=db;Port=5432;Database=mpit;Username=mpit;Password=mpit;",
-    "Redis": "localhost:6379"
+    "Redis": "mpit.redis:6379"
   },
   "JwtOptions": {
     "SecretKey": "c6655065-4095-48df-85a1-227b4277c606-plus-hopes-and-dreams-c6655065-4095-48df-85a1-227b4277c606",
@@ -20,11 +20,11 @@
     "RolePermissions": [
       {
         "Role": "User",
-        "Permissions": [  ]
+        "Permissions": []
       },
       {
         "Role": "Admin",
-        "Permissions": [ "Moderate" ]
+        "Permissions": ["Moderate"]
       }
     ]
   }
