--- a/mpit/appsettings.json
+++ b/mpit/appsettings.json
@@ -20,7 +20,7 @@
     "RolePermissions": [
       {
         "Role": "User",
-        "Permissions": []
+        "Permissions": ["SendMessage"]
       },
       {
         "Role": "Admin",
