--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "6379:6379"
     networks:
       - mpit
+    depends_on:
+      - db
   api:
     container_name: mpit.server
     image: mpit
@@ -27,7 +29,6 @@ services:
     networks:
       - mpit
     depends_on:
-      - db
       - cache
 
   db:
