--- a/mpit/appsettings.json
+++ b/mpit/appsettings.json
@@ -27,5 +27,8 @@
         "Permissions": ["Moderate"]
       }
     ]
+  },
+  "TelegramBot": {
+    "Token": "7731964334:AAFKPkctKH94WxGtvtfA5Dol0GVX-1cpGnc"
   }
 }
